test/Exercism.Analyzers.CSharp.IntegrationTests/Solutions/Errors/HasCompileErrors/Errors.cs
public static class Errors
{
    public static DateTime Add
}